# LLM-Router

./: .env.example  .gitignore  README.md  TODO.md  kimi-followup.plan.md  plan.md  pyproject.toml
configs/: router.chess-system.example.yaml  router.example.yaml  router.vm-dual-ollama.example.yaml  router.vm-pi.example.yaml
docker/: Dockerfile  docker-compose.dual-ollama.example.yml  docker-compose.example.yml
docs/: architecture.md  backends.md  chess-system.md  configuration.md  deployment-systemd.md  fallback.md  index.md  kimi-cli.md  logging.md  rollout-vm-pi.md  security.md
docs/archive/: llm-router.initial.plan.md
scripts/: check-config.sh  install.sh  run-dev.sh  smoke-test.sh
src/llm_router/: app.py  backends.py  cli.py  config.py  errors.py  fallback.py  logging_jsonl.py  openai_compat.py  schemas.py
systemd/: llm-router-user.service.example  llm-router.service.example  ollama-user.service.example
tests/: conftest.py  test_cli.py  test_config.py  test_fallback_detection.py  test_metrics.py  test_models_endpoint.py  test_openai_chat_proxy.py  test_routing.py
