[project]
name = "llm-router"
version = "0.1.0"
description = "Generic local LLM routing gateway with OpenAI-compatible API, backend fallback, model aliases and JSONL logging."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.8",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.10"
]

[project.scripts]
llm-router = "llm_router.cli:main"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
